--- a/.github/workflows/testcpp.yml
+++ b/.github/workflows/testcpp.yml
@@ -15,4 +15,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: configure
       run: cd ./cpp/MPU_6050
+    - name: make
+      run: g++ main.cpp -o test -lwiringPi libSensor.cpp
 
