--- a/.github/workflows/testpython.yml
+++ b/.github/workflows/testpython.yml
@@ -18,6 +18,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
           pip install pytest
           pip install -r ./python/requirements.txt
       - name: Test with pytest
