--- a/.github/workflows/testpython.yml
+++ b/.github/workflows/testpython.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+          pip install numpy
           pip install pytest
           pip install -r ./python/requirements.txt
       - name: Test with pytest
