--- a/.github/workflows/testpython.yml
+++ b/.github/workflows/testpython.yml
@@ -15,14 +15,8 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          #python-version: ${{ matrix.python-version }}
-          python-version: "3.9"
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install numpy
-          pip install pytest
-          pip install -r ./python/requirements.txt
-      - name: Test with pytest
-        run: |
-          pytest ./python/i2cscan.py
+
