--- a/.github/workflows/testpython.yml
+++ b/.github/workflows/testpython.yml
@@ -19,4 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+      - name: Test code
+        run: |
+          python3  ./MPU3DAnality/mpu6050.py
+           
 
